--- a/menu-analysis/Dockerfile
+++ b/menu-analysis/Dockerfile
@@ -1,11 +1,34 @@
-FROM python:3.14-slim AS base
+FROM python:3.13-slim AS base
 ARG DEBIAN_FRONTEND=noninteractive
 
 ENV PROJECT_PATH=/menu-analysis
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        libgl1 \
+        libglib2.0-0 \
+        tesseract-ocr \
+        tesseract-ocr-chi-tra \
+        libtesseract-dev
+
 FROM base AS python-base
 ARG DEBIAN_FRONTEND=noninteractive
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        wget
+
+WORKDIR /usr/share/tessdata_full
+
+# 3. Download the "Full" English and Traditional Chinese data
+#    (These contain the Legacy components required for OEM 2)
+RUN wget -O /usr/share/tessdata_full/eng.traineddata \
+    https://github.com/tesseract-ocr/tessdata/raw/main/eng.traineddata
+
+RUN wget -O /usr/share/tessdata_full/chi_tra.traineddata \
+    https://github.com/tesseract-ocr/tessdata/raw/main/chi_tra.traineddata
+
+ENV TESSDATA_PREFIX=/usr/share/tessdata_full
 
 WORKDIR ${PROJECT_PATH}
 
@@ -30,9 +53,13 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         vim tmux git
 
+ENV TESSDATA_PREFIX=/usr/share/tessdata_full
+
+COPY --from=python-base /usr/share/tessdata_full /usr/share/tessdata_full
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 COPY --from=python-base /root/.cache/uv/ /root/.cache/uv/
 COPY --from=python-base ${PROJECT_PATH} ${PROJECT_PATH}
+
 
 WORKDIR ${PROJECT_PATH}
 
@@ -40,6 +67,13 @@ CMD ["/bin/bash"]
 
 FROM base AS prod
 
+WORKDIR ${PROJECT_PATH}
+
+ENV TESSDATA_PREFIX=/usr/share/tessdata_full
+
+COPY --from=python-base /usr/share/tessdata_full /usr/share/tessdata_full
+COPY --from=python-base ${PROJECT_PATH} ${PROJECT_PATH}
 COPY . .
 
-CMD ["/bin/bash"]
+
+CMD [".venv/bin/python", "-m", "src.main"]
