--- a/telegram-bot/Dockerfile
+++ b/telegram-bot/Dockerfile
@@ -40,6 +40,9 @@ CMD ["/bin/bash"]
 
 FROM base AS prod
 
+WORKDIR ${PROJECT_PATH}
+
+COPY --from=python-base ${PROJECT_PATH} ${PROJECT_PATH}
 COPY . .
 
 WORKDIR ${PROJECT_PATH}
