--- a/menu-analysis/pyproject.toml
+++ b/menu-analysis/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "asyncpg>=0.31.0",
     "cryptography>=46.0.3",
     "fastapi>=0.122.0",
+    "numpy>=2.2.6",
+    "opencv-python>=4.12.0.88",
     "pytesseract>=0.3.13",
     "python-multipart>=0.0.20",
     "uvicorn>=0.38.0",
