--- a/menu-analysis/pyproject.toml
+++ b/menu-analysis/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "asyncpg>=0.31.0",
     "cryptography>=46.0.3",
     "fastapi>=0.122.0",
+    "google-genai>=1.52.0",
     "numpy>=2.2.6",
     "opencv-python>=4.12.0.88",
     "pytesseract>=0.3.13",
