--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 TELEGRAM_BOT_TOKEN=Example-token
 TELEGRAM_BOT_USERNAME=@example
 
+LINE_CHANNEL_ACCESS_TOKEN=Example-token
+LINE_CHANNEL_SECRET=Example-secret
+
 DB_DATABASE=AllergyMenuAssistant
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
